--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       안녕하세요! 호기심 넘치고 적극적으로 소통하는 것을 좋아하는 신입 개발자 김송은입니다. 
-			    항상 성장하기 위해 끊임없이 고민하고, 중요한 것을 놓치지 않기 위해 꾸준히 기록하고 있습니다. 
+                       안녕하세요! 호기심 넘치고 적극적으로 소통하는 것을 좋아하는 신입 개발자 김송은입니다.<br> 
+			    항상 성장하기 위해 끊임없이 고민하고, 중요한 것을 놓치지 않기 위해 꾸준히 기록하고 있습니다. <br>
 			    효율성, 그리고 안정성 두 가지를 모두 놓치지 않고 앞으로의 도전을 할 준비가 되어 있습니다!
 
                     </p>
@@ -91,8 +91,8 @@
                 <h3>초광각 렌즈의 왜곡 보정과 특징융합형 인식 모델 연구</h3>
                 <h4>C++, Python, PyTorch, OpenCV</h4>
                 <p>
-                    - 185󠇨º FOV 어안렌즈 영상을 원통 투영법 기반의 왜곡 보정
-- 렌즈와 이미지 센서 크기 차이로 인한 발생하는 black margin 자동 측정
+                    - 185󠇨º FOV 어안렌즈 영상을 원통 투영법 기반의 왜곡 보정<br>
+- 렌즈와 이미지 센서 크기 차이로 인한 발생하는 black margin 자동 측정<br>
 - 데이터셋의 작은 물체 갯수에 따른 확장 파라미터 적용
 - 물체 인식용 영상 수집 및 라벨링
 - YOLOv3 모델 구조 수정
