--- a/index.html
+++ b/index.html
@@ -88,33 +88,13 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="August 2020 – May 2021">
-                <h3>초광각 렌즈의 왜곡 보정과 특징융합형 인식 모델 연구</h3>
-                <h4>C++, Python, PyTorch, OpenCV</h4>
+                <h3>컴퓨터 로봇비전 연구실</h3>
+                <h4>석사과정</h4>
                 <p>
-                    - 185󠇨º FOV 어안렌즈 영상을 원통 투영법 기반의 왜곡 보정<br>
-- 렌즈와 이미지 센서 크기 차이로 인한 발생하는 black margin 자동 측정<br>
-- 데이터셋의 작은 물체 갯수에 따른 확장 파라미터 적용
-- 물체 인식용 영상 수집 및 라벨링
-- YOLOv3 모델 구조 수정
- 
+                    로봇 및 컴퓨터 비전 연구에서 2차원과 3차원 데이터 획득, 처리, 응용 등 영상 및 깊이 정보를 이용한 전반적인 연구를 수행
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -122,29 +102,20 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>경북대학교 일반대학원</h3>
+            <span class="education-date">Sept 2019 - Aug 2021</span>
+            <h4>전자전기공학부 석사</h4>
+            <!-- <p></p> -->
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
             <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <span class="education-date">March 2014 - Aug 2019</span>
+            <h4>전자공학부 학사</h4>
             <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+                <!-- <li>                </li> -->
+ 
             </ul>
         </div>
         <!-- End .education-block -->
