--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
+            <h3>경북대학교</h3>
             <span class="education-date">March 2014 - Aug 2019</span>
             <h4>전자공학부 학사</h4>
             <ul>
