--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <p>
 				
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://lin24.tistory.com/144">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
