--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project_fe.png" />
+                        <img src="images/fisheye_research_result.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
