--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/etri_detection.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>복합생활안전 시각 데이터베이스 구축</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                        초광각 렌즈의 왜곡 보정으로 데이터량에 따른 인식률 변화 분석과 저사양 임베디드 보드를 활용하여 물체를 인식할 수 있는 경량화 딥러닝을 연구    
+			</p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
