--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <p>
                         초광각 렌즈의 왜곡 보정으로 데이터량에 따른 인식률 변화 분석과 저사양 임베디드 보드를 활용하여 물체를 인식할 수 있는 경량화 딥러닝을 연구    
 			</p>
-                        <a href="#">View Project</a>
+                        <a href="https://lin24.tistory.com/145">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
