--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <!-- End .project -->
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/calibration_3dpointcloud.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
