--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="project-info">
                         <h3>복합생활안전 시각 데이터베이스 구축</h3>
                         <p>
-                        초광각 렌즈의 왜곡 보정으로 데이터량에 따른 인식률 변화 분석과 저사양 임베디드 보드를 활용하여 물체를 인식할 수 있는 경량화 딥러닝을 연구    
+                        <!-- 광각 렌즈의 왜곡 보정으로 데이터량에 따른 인식률 변화 분석과 저사양 임베디드 보드를 활용하여 물체를 인식할 수 있는 경량화 딥러닝을 연구 -->    
 			</p>
                         <a href="https://lin24.tistory.com/145">View Project</a>
                     </div>
@@ -165,9 +165,9 @@
                     <div class="project-info">
                         <h3>RGB-IR 통합 3D point cloud 구현</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://lin24.tistory.com/146">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -180,7 +180,7 @@
                     <div class="project-info">
                         <h3>MCU 보드 기반 도서관 서가 안내 로봇 제작</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            
                         </p>
                         <a href="#">View Project</a>
                     </div>
