--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <p>
                             
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Ssong24/K_Bot">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -195,7 +195,7 @@
                     <div class="project-info">
                         <h3>3D 비전 카메라를 통한 다단 적재 대상물 위치 추정</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                           
                         </p>
                         <a href="#">View Project</a>
                     </div>
