--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <!-- End .project -->
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/projectGuideRobot_front.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -189,7 +189,7 @@
                 <!-- End .project -->
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project.Yujin_frontjpg.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
