--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <p>
                             
                         </p>
-                        <a href="https://lin24.tistory.com/146">View Project</a>
+                        <a href="https://github.com/Ssong24/-App-_D435/tree/master/%5BApp%5D_Calibbration">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -197,7 +197,7 @@
                         <p>
                            
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Ssong24/YUJIN-Mechatronics">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
