--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <div id="experience-timeline">
             <div data-date="August 2020 – May 2021">
                 <h3>컴퓨터 로봇비전 연구실</h3>
-                <h4>석사과정</h4>
-                <p>
+                <h4>연구원</h4>
+                <p> 
                     로봇 및 컴퓨터 비전 연구에서 2차원과 3차원 데이터 획득, 처리, 응용 등 영상 및 깊이 정보를 이용한 전반적인 연구를 수행
                 </p>
             </div>
